--- a/tallerTypeScript1/index.html
+++ b/tallerTypeScript1/index.html
@@ -2,27 +2,44 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>TV Series</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="data:,"> 
+    <link rel= "stylesheet" href="style.css">
+    <script type = "module" src='./scripts/main.js'></script>
 </head>
 <body>
     <script>var exports = {};</script>
     <script src='main.js' defer></script>
-    
     <div class="title" style="background-color: #17a9c3; color: #000000">
         <img src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/i/54fbf860-1d0d-46e7-a22a-74edb3053c67/d6qj64q-f30328aa-5b8c-4ec4-979a-dea8d78c5498.png" 
         width = '30' height = '30'/>            
         <h1>TV Series</h1>
     </div>
-
-    <div>
-        <table class = 'table' id = 'serie' cellpadding = '1' width = '600' cellspacing = '15'></table>
-    </div>
-
-    <div>
-        <table class = 'row' id = 'estadistica'></table>
+    <div class = "container-fluid">
+        <div class = "row">
+            <div class = "col-8" id = "columnaTabla">
+                <table class = "table" id = "serie">
+                        <tr>
+                            <th>#</th>
+                            <th>Name</th>
+                            <th>Channel</th>
+                            <th>Seasons</th>
+                        </tr>
+                </table>
+                <table class = "table" id = "statistic"></table>
+            </div>
+            <div class = "col" id = "columnaTarjeta">
+                <div class = "card" id = "card" style="display:none">
+                    <div class = "card-body" id = "cuerpoCarta">
+                        <img class = "card-img-top" src = "" id = "picture" referrerpolicy = "no-referrer" height = "auto" width = "auto"/>
+                        <h1 class = "card-title" id = "name"></h1>
+                        <p class = "card-text" id = "description"></p>
+                        <a href = "#" id = "review" class = "btn btn-primary">Más Información</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
