--- a/tallerTypeScript1/index.html
+++ b/tallerTypeScript1/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class = "container-fluid">
         <div class = "row">
-            <div class = "col-8" id = "columnaTabla">
+            <div class = "column" id = "columnaTabla" colspan = "2">
                 <table class = "table" id = "serie">
                         <tr>
                             <th>#</th>
@@ -29,13 +29,13 @@
                 </table>
                 <table class = "table" id = "statistic"></table>
             </div>
-            <div class = "col" id = "columnaTarjeta">
-                <div class = "card" id = "card" style="display:none">
+            <div class = "column" id = "columnaTarjeta">
+                <div class = "card" id = "card" style = "display:none">
+                    <img class = "card-img-top" src = "" id = "picture" referrerpolicy = "no-referrer" alt = "Card image cap"/>
                     <div class = "card-body" id = "cuerpoCarta">
-                        <img class = "card-img-top" src = "" id = "picture" referrerpolicy = "no-referrer" height = "auto" width = "auto"/>
                         <h1 class = "card-title" id = "name"></h1>
                         <p class = "card-text" id = "description"></p>
-                        <a href = "#" id = "review" class = "btn btn-primary">Más Información</a>
+                        <a href = "#" id = "review" class = "btn btn-primary">More info</a>
                     </div>
                 </div>
             </div>
